# embedded-services

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  README.md  codecov.yml  run-tests-coverage.sh  sonar-project.properties
.gitea/workflows/: generate-docs.yml  test-and-coverage.yml
.github/workflows/: test-and-coverage.yml
docs/: Doxyfile  conf.py  generate.sh  groups.dox  index.md  index.rst
docs/_doxygen/: electronya.css  electronya.js  header.html
docs/_static/: electronya.css
docs/services/: adc-acquisition.md  adc-acquisition.rst  datastore.md  datastore.rst  led-strip.rst  service-manager.md  service-manager.rst
scripts/: calculate_coverage.py
src/adcAcquisition/: CMakeLists.txt  Kconfig  README.md  adcAcquisition.c  adcAcquisition.h  adcAcquisitionCmd.c  adcAcquisitionFilter.c  adcAcquisitionFilter.h  adcAcquisitionUtil.c  adcAcquisitionUtil.h  adcAcquisitionVref.h
src/datastore/: CMakeLists.txt  Kconfig  README.md  datastore.c  datastore.h  datastoreCmd.c  datastoreCmdUtil.c  datastoreCmdUtil.h  datastoreMeta.h  datastoreTypes.h  datastoreUtil.c  datastoreUtil.h
src/ledStrip/: CMakeLists.txt  Kconfig  README.md  ledStrip.c  ledStrip.h  ledStripCmd.c  ledStripUtil.c  ledStripUtil.h
src/serviceCommon/: CMakeLists.txt  Kconfig  serviceCommon.h  usbDevice.c  usbDevice.h
src/serviceManager/: CMakeLists.txt  Kconfig  README.md  serviceManager.c  serviceManager.h  serviceManagerCmd.c  serviceManagerUtil.c  serviceManagerUtil.h
src/simhubDevice/: CMakeLists.txt  Kconfig  README.md  simhubDevProto.c  simhubDevProto.h  simhubDevUtil.c  simhubDevUtil.h  simhubDevice.c  simhubDevice.h
tests/adcAcquisition/cmd/: CMakeLists.txt  testcase.yaml
tests/adcAcquisition/cmd/src/: main.c
tests/adcAcquisition/filter/: CMakeLists.txt  prj.conf  testcase.yaml
tests/adcAcquisition/filter/src/: main.c
tests/adcAcquisition/service/: CMakeLists.txt  testcase.yaml
tests/adcAcquisition/service/src/: main.c
tests/adcAcquisition/util/: CMakeLists.txt  app.overlay  testcase.yaml
tests/adcAcquisition/util/src/: main.c
tests/datastore/cmd/: CMakeLists.txt  testcase.yaml
tests/datastore/cmd/src/: datastoreMeta.h  main.c
tests/datastore/cmdUtil/: CMakeLists.txt  testcase.yaml
tests/datastore/cmdUtil/src/: datastoreMeta.h  main.c
tests/datastore/ds/: CMakeLists.txt  testcase.yaml
tests/datastore/ds/src/: datastoreMeta.h  main.c
tests/datastore/service/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/datastore/service/src/: main.c
tests/datastore/util/: CMakeLists.txt  testcase.yaml
tests/datastore/util/src/: datastoreMeta.h  main.c
tests/ledStrip/cmd/: CMakeLists.txt  testcase.yaml
tests/ledStrip/cmd/src/: main.c
tests/ledStrip/service/: CMakeLists.txt  testcase.yaml
tests/ledStrip/service/src/: main.c
tests/ledStrip/util/: CMakeLists.txt  testcase.yaml
tests/ledStrip/util/src/: main.c
tests/serviceCommon/usbDevice/: CMakeLists.txt  testcase.yaml
tests/serviceCommon/usbDevice/src/: main.c
tests/serviceCommon/usbDeviceNoIad/: CMakeLists.txt  testcase.yaml
tests/serviceCommon/usbDeviceNoIad/src/: main.c
tests/serviceManager/cmd/: CMakeLists.txt  testcase.yaml
tests/serviceManager/cmd/src/: main.c
tests/serviceManager/service/: CMakeLists.txt  prj.conf  testcase.yaml
tests/serviceManager/service/src/: main.c
tests/serviceManager/util/: CMakeLists.txt  testcase.yaml
tests/serviceManager/util/src/: main.c
tests/simhubDevice/proto/: CMakeLists.txt  testcase.yaml
tests/simhubDevice/proto/src/: main.c
tests/simhubDevice/service/: CMakeLists.txt  testcase.yaml
tests/simhubDevice/service/src/: main.c
tests/simhubDevice/util/: CMakeLists.txt  testcase.yaml
tests/simhubDevice/util/src/: main.c
zephyr/: module.yml
